fixup to spacing;

--- a/src/scss/components/side-navigation/_side-navigation.scss
+++ b/src/scss/components/side-navigation/_side-navigation.scss
@@ -51,7 +51,7 @@
         background: transparent url("../../assets/svg/icon_arrow_down_red.svg") no-repeat top / 75%;
         right: 0;
         height: 50px;
-        top: 5px;
+        top: 10px;
         transform: rotate(-90deg);
       }
     }
@@ -92,7 +92,7 @@ ul {
       a {
         color: $su-color-stone;
         font-size: 2.3rem;
-        padding: 2rem 4.8rem 2rem 2.4rem;
+        padding: 2rem 1.5rem 2rem 4.8rem;
 
         &:hover,
         &:active,
